crates/strider/tests/snapshots/v2__ppc64be__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ f2", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1001029c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "22" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "26" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "29" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "30" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0xc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "32" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u64\n→ ram[sp - 128]", shape=box3d, fillcolor="#20182a"];
  "36" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xffffffffffffff80:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u64\n→ ram[sp + 16]", shape=box3d, fillcolor="#20182a"];
  "39" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "43" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "48" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "49" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "29" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ f1", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "52" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v53" [color="#888888", style=dashed];
  "v53" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ r4", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "54" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v55" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v55" [color="#888888", style=dashed];
  "v55" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ r3", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "56" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v57" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v57" [color="#888888", style=dashed];
  "v57" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "63" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "74" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "76" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "78" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "78" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "72" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "80" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "82" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "82" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "82" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "83" -> "82" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
